# laba2_os

./: .gitignore  CMakeLists.txt  functions.cpp  functions.h  main.cpp  test_main.cpp
tests/: test_main.cpp  test_winapi.cpp
winapi/: functions_winapi.cpp  functions_winapi.h  main_winapi.cpp
